Check file size (#114)